# swive

./: .gitignore  README.md  checks.sh  manage.py  pyproject.toml  requirements.txt
.ebextensions/: django.config
.elasticbeanstalk/: config.yml
account/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
account/management/commands/: createcoaches.py
account/templates/: edit.html
account/templates/registration/: create.html  login.html
accounts/: admin.py  models.py
accounts/templates/: home.html
accounts/templates/registration/: login.html
common/: admin.py  constants.py  forms.py  models.py  paginator.py  test_utils.py  utils.py
common/static/: base.css  paginated-search.js  sidebar.css  sidebar.js
common/tables/: columns.py  paginator.py
common/templates/: base.html  home.html  paginated-search-base.html  paginated-table-base.html  robots.txt  sidebar.html
docs/: deploy.md
registration/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  views.py
registration/managers/: __init__.py  _meet_entries_manager.py
registration/static/: athlete.js  meet-entry.css  meet-entry.js
registration/static/registration/: conference.js
registration/templates/: athletes.html  conference.html  edit-meet-entries.html  meet-entries.html  meet-entry.html  meet_entry.html  view-meet-entries.html
requirements/: common.txt  dev.txt
root/: apps.py  columns.py  urls.py  views.py
root/templates/: meets.html  teams.html
swive/: asgi.py  settings.py  urls.py  wsgi.py
swive/settings/: base.py  development.py  production.py
(+1 files in other folders)
