[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "swive"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Zibing Zhang", email = "contact@zibingzhang.com"}
]
dependencies = [
    "Django>=5.0",
    "django-bootstrap5",
    "django-import-export>=3.3.4",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
dev = [
    "black>=23.12",
    "django-stubs[compatible-mypy]>=4.2",
    "flake8>=6.1",
    "isort>=5.13",
    "pyproject-flake8>=5.0",
    "pytest>=7.4",
]
eb = [
    "awsebcli>=3.20",
]

[project.urls]
Homepage = "https://github.com/ZibingZhang/swive"

[tool.setuptools]
py-modules = [
    "accounts",
    "common",
    "registration",
    "swive",
]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "swive.settings.production"
